# Rhizome

./: .gitignore  Cargo.toml  README.md  flake.nix
docs/: refactor_ui_plan.md
src/: main.rs  models.rs  storage.rs  ui.rs
src/ui/: actions.rs  input.rs  logic.rs  mod.rs  state.rs
src/ui/view/: components.rs  layouts.rs  mod.rs
