[package]
name = "rhizome"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
dirs = "6.0"
crossterm = "0.29.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"
uuid = { version = "1.19.0", features = ["v4"] }
